removing the bullet points and fixing the spacing

--- a/Lab2/styles.css
+++ b/Lab2/styles.css
@@ -53,7 +53,10 @@
 }
 
 #flex-section3 .tags ul {
-
+	display: flex;
+	list-style: none;
+	padding: 0;
+	margin: 0;
 }
 
 /* end Flexbox Part 3 */
